--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>Park 'N' Pay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
     
 </head>
 <body>
 
-        ]<nav class="navbar bg-dark navbar-dark">
+        <nav class="navbar navbar-dark" id="navColor">
                 <div class="container">
-                    <a href="" class="navbar-brand"><i class="fas fa-binoculars mr-2"></i> Pattern</a>
+                    <a href="" class="navbar-brand"><i class="fas fa-car-side mr-2"></i>Park 'N' Pay</a>
                 </div>
             </nav>
         
             <section id="header" class="jumbotron text-center">
-                <h1 class="display-3">PATTERN</h1>
+                <h1 class="display-3">Park 'N' Pay</h1>
                 <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
                 <a href="" class="btn btn-primary">Do Something</a>
                 <a href="" class="btn btn-success">Another Thing</a>
