--- a/index.html
+++ b/index.html
@@ -37,15 +37,16 @@
          </nav>
         
         <section class="jumbotron text-center">
-            <div class="bg-light col-3-lg">
-                <h1 class="display-2" >Park 'N' Pay</h1>
-                <blockquote class="blockquote">
-                        <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <div class="row">
+                <h1 class="display-2 col-12" >Park 'N' Pay</h1>
+                <blockquote class="blockquote col-12 mb-0">
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                 </blockquote>
             </div>
-            <div class="row justify-content-center">  
-                <a href="" class="btn btn-warning btn-block col-3">Offer a Space</a>
-                <a href="" class="btn btn-success col-3">Park Now</a>
+            <hr class="align-self-center">
+            <div class="row justify-content-center align-items-center">  
+                <a href="" class="btn btn-warning mx-1 mx-md-2 mx-lg-4 col-3">Sell Space</a>
+                <a href="" class="btn btn-success mx-1 mx-md-2 mx-lg-4 col-3">Park Now</a>
             </div>
         </section>
         
