--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
                                         <div class="cardInfo">
                                             <div class="row d-flex justify-content-start">
                                                     <div class="col-4 text-center hText">User: </div>
-                                                    <div class="col-8">*Name*</div>                                           
+                                                    <div class="col-8">Hannah</div>                                           
                                             </div>
                                             <div class="row d-flex justify-content-start">
                                                     <div class="col-4 text-center hText">Cost: </div>
-                                                    <div class="col-8">*Price*</div>
+                                                    <div class="col-8" id="Cost">*Price*</div>
                                             </div>
                                             <div class="row d-flex justify-content-start">
                                                     <div class="col-4 text-center hText">Time: </div>
-                                                    <div class="col-8">*##:##*</div>  
+                                                    <div class="col-8" id="Time">*##:##*</div>  
                                             </div>
                                         </div>
                                     
