Changed Name Of Project
Park N Pay  --> Park N Go

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Park 'N' Pay</title>
+    <title>Park 'N' Go</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -15,7 +15,7 @@
 
         <nav class="navbar navbar-dark navbar-expand-md fixed-top" id="navColor">
                 <div class="container-fluid">
-                    <a href="" class="navbar-brand"><i class="fas fa-car-side mr-2"></i>Park 'N' Pay</a>
+                    <a href="" class="navbar-brand"><i class="fas fa-car-side mr-2"></i>Park 'N' Go</a>
                     <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="button toggle">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -38,7 +38,7 @@
         
         <section class="jumbotron text-center" id="jumboMargin">
             <div class="row">
-                <h1 class="display-2 col-12" >Park 'N' Pay</h1>
+                <h1 class="display-2 col-12" >Park 'N' Go</h1>
                 <blockquote class="blockquote col-12 mb-0">
                         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                 </blockquote>
@@ -126,6 +126,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="app.js"></script>
+<script src="cssScript.js"></script>
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqb8RzdATmA1ucjHuPHbIItO3GzXxlFVI&callback=initMap">
 </script>
