Minimal Format Change

--- a/index.html
+++ b/index.html
@@ -111,14 +111,26 @@
                 </div>
             </div>
 
-            <!-- <div class="row">
+             <!-- <div class="row">
                 <div class="col-sm-3">
                    <button type="button" class="btn btn-primary btn-lg btn-block">Same </button>
                    <button type="button" class="btn btn-primary btn-lg btn-block">Same sized </button>
                    <button type="button" class="btn btn-primary btn-lg btn-block">Same sized button</button>
                 </div>
+            </div> -->
+        </section>
+
+        <section class="container">
+
+            <div>
+                <p class="text-right">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo necessitatibus nobis fugit impedit dolorem suscipit, architecto, dolorum neque obcaecati totam adipisci repellendus! Maxime, ipsum quae sed minus possimus perferendis. Tenetur.</p>
             </div>
-        </section> -->
+
+
+
+
+
+        </section>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
