--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
                     
             <div class="row justify-content-center mb-4">
-                <div class="col-lg-5">
+                <div class="col-lg-5" id="spotInfo">
                     <div class="card  mb-2">
                         <!-- <img class="card-img-top" src="imgs/pattern1.jpeg" alt=""> -->
                         <div class="card-body">
