Small Dynamic CSS Changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <hr class="align-self-center">
             <div class="row justify-content-center align-items-center">  
-                <a href="" class="btn btn-warning mx-1 mx-md-2 mx-lg-4 col-3">Sell Space</a>
+                <a href="" class="btn btn-warning whiteButton mx-1 mx-md-2 mx-lg-4 col-3">Sell Space</a>
                 <a href="" class="btn btn-success mx-1 mx-md-2 mx-lg-4 col-3">Park Now</a>
             </div>
         </section>
