--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                                             <div class="col-6">Hannah</div>                                           
                                     </div>
                                     <div class="row d-flex justify-content-start">
-                                            <div class="col-6 text-right hText">Cost: </div>
+                                            <div class="col-6 text-right hText">Balance: </div>
                                             <div class="col-6" id="Cost">*Price*</div>
                                     </div>
                                     <div class="row d-flex justify-content-start">
-                                            <div class="col-6 text-right hText">Time: </div>
+                                            <div class="col-6 text-right hText">Time Parked: </div>
                                             <div class="col-6" id="Time">*##:##*</div>  
                                     </div>
                                 </div>
@@ -116,7 +116,13 @@
             </div> -->
         </section>
 
-        <hr class="align-self-center">
+        <section id="footer">
+            <div class="jumbotron closingSec">
+                <p>Chill</p>
+            </div>
+
+
+        </section>
 
 
 
