--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </section>
 
         <section id="footer">
-            <div class="jumbotron closingSec">
+            <div class="jumbotron row closingSec">
                 <p>Chill</p>
             </div>
 
