Adam's Actual Final Push
Still need Karim to finish his User sell space & balance convertion script from his api.
Front end is complete.
Need: When sensor detects user, start timer. Calculate cost and deduct from user balance. add money to owner accout balance.
Thats it

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                     <div class="card mb-2">
                         <!-- <img class="card-img-top" src="imgs/pattern2.jpeg" alt=""> -->
                         <div class="card-body">
-                            <h4 class="card-title text-center">Current Stats</h4>
+                            <h4 class="card-title text-center">My Stats</h4>
                                 <div class="cardMargin">
                                     <div class="row d-flex justify-content-start">
                                             <div class="col-6 text-right hText">User: </div>
-                                            <div class="col-6">Hannah</div>                                           
+                                            <div class="col-6">*Username*</div>                                           
                                     </div>
                                     <div class="row d-flex justify-content-start">
                                             <div class="col-6 text-right hText">Balance: </div>
-                                            <div class="col-6" id="Cost">*Price*</div>
+                                            <div class="col-6" id="Cost">*AccountBal*</div>
                                     </div>
                                     <div class="row d-flex justify-content-start">
                                             <div class="col-6 text-right hText">Time Parked: </div>
-                                            <div class="col-6" id="Time">*##:##*</div>  
+                                            <div class="col-6" id="Time">*00:00*</div>  
                                     </div>
                                 </div>
                                 <div class="row justify-content-center">
@@ -117,8 +117,9 @@
         </section>
 
         <section id="footer">
-            <div class="jumbotron row closingSec">
-                <p>Chill</p>
+            <div class="jumbotron row flex-column closingSec whiteButton">
+                <p>Made at QHacks 2019!</p>
+                <p>Hannah & Adam & Abu & Karim</p>
             </div>
 
 
