--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
                                 <div class="cardMargin">
                                     <div class="row d-flex justify-content-start">
                                             <div class="col-6 text-right hText">User: </div>
-                                            <div class="col-6">*Username*</div>                                           
+                                            <div class="col-6 userInfo">*Username*</div>                                           
                                     </div>
                                     <div class="row d-flex justify-content-start">
                                             <div class="col-6 text-right hText">Balance: </div>
-                                            <div class="col-6" id="Cost">*AccountBal*</div>
+                                            <div class="col-6 userInfo" id="Cost">*AccountBal*</div>
                                     </div>
                                     <div class="row d-flex justify-content-start">
                                             <div class="col-6 text-right hText">Time Parked: </div>
-                                            <div class="col-6" id="Time">*00:00*</div>  
+                                            <div class="col-6 userInfo" id="Time">*00:00*</div>  
                                     </div>
                                 </div>
                                 <div class="row justify-content-center">
@@ -124,6 +124,12 @@
 
 
         </section>
+        <!-- #footer .closingSec{
+            font-size: 0.7rem;
+            margin-bottom: 0px;
+            padding: 2rem;
+            background-color:  #232323;
+        } -->
 
 
 
