fixed src and href from stdlib to gh-pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="./static/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
 
 </head>
 
@@ -174,7 +174,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
             crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="./static/app.js"></script>
+        <script src="app.js"></script>
         <!--<script src="cssScript.js"></script>-->
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqb8RzdATmA1ucjHuPHbIItO3GzXxlFVI&callback=initMap">
         </script>
